# customer-purchase-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.kafka.yaml  docker-compose.stream.yaml  pyproject.toml
notebook/: eda.ipynb
src/producer/: Dockerfile  produce.py
src/producer/avro_schemas/: ecommerce_events.avsc
src/streaming/: Dockerfile  main.py
src/streaming/jobs/: schema_validation_job.py
